[package]
name = "forced-withdraw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
clap = { version = "3", features = ["derive"] }
bitcoin = { version = "=0.31.0", features = ["std", "rand-std", "bitcoinconsensus"] }